# RAG

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  manual_retrieve_test.py  rag_demo.py  run_manual_retrieve_all.bat  test-chunks.json  tmp_retrieve_payload.json  前端需求文档.md  后端需求设计(草稿）.md
backend/: .env.example  .gitignore  API.md  pyproject.toml
backend/app/: config.py  dependencies.py  exception_handlers.py  exceptions.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: kb.py  (+4 more)
backend/app/core/: httpx_client.py  qdrant.py
backend/app/db/: session.py
backend/app/mcp/: __init__.py  formatting.py  prompts.py  resources.py  server.py  stdio_runner.py  tools.py
backend/app/models/: document.py  kb_folder.py  knowledge_base.py
backend/app/schemas/: common.py  document.py  kb.py  kb_folder.py  retrieve.py
backend/app/services/: bm25_service.py  chat_completion_service.py  chunking_service.py  context_synthesis_service.py  document_service.py  embedding_service.py  kb_folder_service.py  kb_service.py  parsing_service.py  pipeline_service.py  pipeline_worker.py  prechunk_pipeline_service.py  query_rewrite_service.py  reranker_service.py  retrieval_service.py  sparse_embedding_service.py  task_manager.py  vector_store_service.py
backend/app/utils/: id_gen.py  retry.py
backend/docs/: pipeline-worker-design.md  retrieval_optimization_proposal.md
backend/test_uploads/kb_doc_test_kb_577a6b5e/: list_test.md
backend/test_uploads/kb_doc_test_kb_6448698c/: test.md
backend/test_uploads/kb_doc_test_kb_f3c80ca4/: task_test.md
backend/tests/: conftest.py
(+84 files in other folders)
